# StudentStorage

./: .gitignore  CMakeLists.txt  README.md  Student.cpp  Student.h
src/: main.cpp
src/Database/: DB.h  IDB.h  RAM_DB.cpp  RAM_DB.h
src/Student/: Student.cpp  Student.h
src/enums/: Enums.h
